# cognito-external-idp-proxy

./: README.md
.github/workflows/: python-tests.yml  ts-tests.yml
alternatives/typescript/: .env.template  .gitignore  README.md  cdk.context.template  cdk.json  package.json
alternatives/typescript/lib/: pkjwt-pkce.ts  pkjwt.ts  typescript-stack.ts
alternatives/typescript/test/: typescript.test.ts
cdk/: pjwt_stack.py  pjwt_with_pkce_stack.py
lambda/rust/authorize/: Cargo.toml
lambda/rust/authorize/src/: main.rs
lambda/rust/callback/: Cargo.toml
lambda/rust/callback/src/: main.rs
lambda/rust/token/: Cargo.toml
lambda/rust/token/src/: main.rs
