[package]
name = "token"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
aws-config = { version = "1.5.1", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.39.0"
aws-sdk-secretsmanager = "1.35.1"
jsonwebkey = { version = "0.3.5", features = ["jwt-convert"] }
jsonwebtoken = { version = "9.3.0", features = ["use_pem"] }
lambda_http = "0.11.4"
reqwest = { version = "0.12.5", features = ["json", "rustls-tls"], default-features = false }
serde = "1.0.203"
serde_json = "1.0.117"
serde_qs = "0.13.0"
serde_urlencoded = "0.7.1"

tokio = { version = "1", features = ["macros"] }

